@@ -8,12 +8,12 @@ import com.hollingsworth.arsnouveau.common.lib.RitualLib;
 import com.hollingsworth.arsnouveau.setup.registry.RecipeRegistry;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.particles.ParticleTypes;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.resources.Identifier;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.util.random.WeightedEntry;
-import net.minecraft.util.random.WeightedRandomList;
+import net.minecraft.util.random.WeightedList;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
@@ -23,24 +23,27 @@ import net.minecraft.world.level.biome.MobSpawnSettings;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class RitualAnimalSummoning extends AbstractRitual {
     private final MobCategory category = MobCategory.CREATURE;
-    private WeightedRandomList<? extends WeightedEntry> mobs;
+    private WeightedList<?> mobs;
 
     private Optional<RecipeHolder<SummonRitualRecipe>> recipe;
 
     private Optional<RecipeHolder<SummonRitualRecipe>> getRecipe() {
-        return getWorld().getRecipeManager().getAllRecipesFor(RecipeRegistry.SUMMON_RITUAL_TYPE.get()).stream().filter(r -> r.value().matches(getConsumedItems())).findFirst();
+        Level w = getWorld();
+        if (w == null || w.getServer() == null) return Optional.empty();
+        return w.getServer().getRecipeManager().recipeMap().byType(RecipeRegistry.SUMMON_RITUAL_TYPE.get()).stream().filter(r -> r.value().matches(getConsumedItems())).findFirst();
     }
 
-    private WeightedRandomList<? extends WeightedEntry> getMobs(Level world) {
+    private WeightedList<?> getMobs(Level world) {
         if (recipe.isPresent()) {
             SummonRitualRecipe summonRitualRecipe = recipe.get().value();
             return summonRitualRecipe.mobs;
         }
-        return WeightedRandomList.create(world.getBiome(getPos()).value().getMobSettings().getMobs(category).unwrap().stream().filter(mob -> !mob.type.is(EntityTags.ANIMAL_SUMMON_BLACKLIST)).collect(Collectors.toList()));
+        var biomeList = world.getBiome(getPos()).value().getMobSettings().getMobs(category).unwrap();
+        var filtered = biomeList.stream().filter(w -> !w.value().type().is(EntityTags.ANIMAL_SUMMON_BLACKLIST)).toList();
+        return WeightedList.of(filtered);
     }
 
     @Override
@@ -63,15 +66,15 @@ public class RitualAnimalSummoning extends AbstractRitual {
         if (mobs == null) mobs = getMobs(world);
 
         //every 60 ticks, spawn a mob. 1 tick = 1/20th of a second
-        if (world.getGameTime() % 60 == 0 && !world.isClientSide) {
+        if (world.getGameTime() % 60 == 0 && !world.isClientSide()) {
 
             //randomize the spawn position
             BlockPos summonPos = getPos().above().east(rand.nextInt(3) - rand.nextInt(6)).north(rand.nextInt(3) - rand.nextInt(6));
 
-            Optional<? extends WeightedEntry> opt = mobs.getRandom(rand);
+            Optional<?> opt = mobs.getRandom(rand);
             opt.ifPresent(entry -> {
                 if (entry instanceof MobSpawnSettings.SpawnerData spawnerData) {
-                    Entity mob = spawnerData.type.create(world);
+                    Entity mob = spawnerData.type().create(world, EntitySpawnReason.SPAWNER);
                     if (mob == null) return;
                     summon(mob, summonPos);
                     incrementProgress();
@@ -95,7 +98,7 @@ public class RitualAnimalSummoning extends AbstractRitual {
         mob.level().addFreshEntity(mob);
         if (mob.level() instanceof ServerLevel serverLevel) {
             for (ServerPlayer player : serverLevel.players()) {
-                serverLevel.sendParticles(player, ParticleTypes.END_ROD, false, pos.getX(), pos.getY() + 0.1, pos.getZ(), 10, 0.1, 0.1, 0.1, 0.05);
+                serverLevel.sendParticles(player, ParticleTypes.END_ROD, false, false, pos.getX(), pos.getY() + 0.1, pos.getZ(), 10, 0.1, 0.1, 0.1, 0.05);
             }
         }
     }
@@ -111,7 +114,9 @@ public class RitualAnimalSummoning extends AbstractRitual {
 
     @Override
     public boolean canConsumeItem(ItemStack stack) {
-        return getWorld().getRecipeManager().getAllRecipesFor(RecipeRegistry.SUMMON_RITUAL_TYPE.get()).stream().anyMatch(r -> r.value().augment.test(stack));
+        Level w = getWorld();
+        if (w == null || w.getServer() == null) return false;
+        return w.getServer().getRecipeManager().recipeMap().byType(RecipeRegistry.SUMMON_RITUAL_TYPE.get()).stream().anyMatch(r -> r.value().augment.test(stack));
     }
 
     @Override
@@ -125,7 +130,7 @@ public class RitualAnimalSummoning extends AbstractRitual {
     }
 
     @Override
-    public ResourceLocation getRegistryName() {
+    public Identifier getRegistryName() {
         return ArsNouveau.prefix(RitualLib.ANIMAL_SUMMON);
     }
 }
